discussion/kv_engine/155176/155176_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Don't use the bucket logger from executor

Remove the binding to the bucket logger from the executor as it
is running in the core.

Change-Id: I984ef9374fb46ea181c38eec01698b82587c5f60

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-08 06:04:17.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-08 06:11:10.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11149/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11149/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10219/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10219/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11569/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11569/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11297/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11297/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19154/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19154/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9574/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/cb3_executorthread.cc:94:9: error: use of undeclared identifier "LOG_WARN" [clang-diagnostic-error]
        LOG_WARN("Failed to set thread {} to background priority - {}",
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9574/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/cb3_executorthread.cc:94:9:
error: use of undeclared identifier "LOG_WARN" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9574/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36527/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36527/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31215/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/executor/cb3_executorthread.cc:94:9:
error: use of undeclared identifier "LOG_WARN"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31215/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8172/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
